tests/snapshots/run_wpt_conformance__trtx_prelu_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float16 5D tensors",
    "trtx",
    "PASS",
)
