tests/snapshots/run_wpt_conformance__trtx_prelu_float16_broadcast_5D_x_5D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float16 broadcast 5D x 5D slope",
    "trtx",
    "PASS",
)
